# tasks

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
client/: package.json  pnpm-lock.yaml  svelte.config.js
client/src/: stores.ts
client/src/client/: runtime.ts
client/src/client/.openapi-generator/: FILES
client/src/client/apis/: TaskApi.ts  UserApi.ts
client/src/client/models/: HTTPValidationError.ts  LocationInner.ts  TaskCreateInput.ts  TaskOutput.ts  TaskUpdateInput.ts  index.ts
client/src/components/: LoginComponent.svelte  RegisterComponent.svelte  TaskCreateComponent.svelte  TaskListComponent.svelte
client/src/routes/: __layout.svelte  index.svelte  login.svelte
client/src/utils/: client.ts
client/src/utils/apiclient/: runtime.ts
mobile_client/: pubspec.yaml
mobile_client/android/app/: build.gradle
mobile_client/lib/: main.dart
server/: Pipfile  app.py  config.py  models.py  pyproject.toml  requirements.txt
server/api/: __init__.py  tasks.py  users.py
server/app/: app.py  config.py
server/app/middlewares/: authentication.py
server/app/models/: tasks.py  users.py
server/app/routes/: tasks.py  users.py
server/migrations/models/: 0_20220814111623_init.sql  0_20221002153717_init.py  1_20220814113846_update.sql  1_20221002160404_add_refresh_token_model.py
web_client/: package.json  pnpm-lock.yaml  svelte.config.js
web_client/src/api/: api.ts  index.ts  task_syncer.ts  tokens.ts
web_client/src/components/: LoginComponent.svelte  RegisterComponent.svelte  TaskCardComponent.svelte
web_client/src/data/: database.ts
web_client/src/routes/: +layout.svelte  +page.svelte
(+16 files in other folders)
